--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.serviceenabled</groupId>
     <artifactId>dropwizard-request-tracker</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
     <name>Dropwizard Request Tracker</name>
     <url>https://github.com/service-enabled/dropwizard-request-tracker</url>
     <description>
